--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -39,18 +39,22 @@ h3 {
 .mt-auto {
   margin: 40px auto;
 }
+
 .mb-20 {
   margin-bottom: 20px;
 }
+
 .margin {
   margin-top: 10px;
-  margin-bottom: 20px !important;
 }
+
 .flex-1 {
   flex: 1;
 }
+
 .flex-2 {
   flex: 2;
+  margin-bottom: 20px;
 }
 
 /* ========================== */
@@ -65,7 +69,7 @@ h3 {
 }
 
 .dashboard-container {
-  max-width: 1300px;
+  max-width: 1500px;
   margin: 100px auto;
   padding: 20px;
 }
@@ -147,7 +151,7 @@ select {
   width: 100%;
   padding: 12px;
   margin-top: 10px;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
   border: 1px solid var(--border-color);
   border-radius: 6px;
   font-size: 1rem;
@@ -273,7 +277,6 @@ button:hover {
   max-width: 400px;
   display: flex;
   flex-direction: column;
-  gap: 15px;
 }
 
 .login-form h2 {
@@ -320,8 +323,61 @@ button:hover {
 
 .error {
   color: red;
-  text-align: center;
-  margin-bottom: 8px;
+  margin-bottom: 20px;
+}
+
+.bento-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 30px;
+}
+
+.bento-card {
+  background: white;
+  padding: 20px;
+  border-radius: 12px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
+}
+
+.budget-form {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+
+.form-group label {
+  display: block;
+  font-weight: 500;
+  color: #333;
+}
+
+input[type='month'],
+input[type='number'] {
+  padding: 10px 12px;
+  font-size: 16px;
+  border-radius: 6px;
+  border: 1px solid #ccc;
+}
+
+.btn-primary {
+  background-color: #007bff;
+  color: white;
+  padding: 10px 16px;
+  font-size: 16px;
+  border: none;
+  border-radius: 6px;
+  cursor: pointer;
+  transition: background-color 0.2s ease-in-out;
+}
+
+.btn-primary:hover {
+  background-color: #0056b3;
+}
+
+.budget-note {
+  margin-top: 15px;
+  color: #333;
+  font-size: 15px;
 }
 
 /* ========================== */
